Almost final commit

--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
   </head>
 
   <body align="center">
-    <a href="member/memberLogin.php">Member Login</a>
-    <a href="staff/staffLogin.php">Staff Login</a>
-    <a href="instructor/instructorLogin.php">Instructor Login</a>
+    <a href="member/memberLogin.php"><h1>Member Login</h1></a><br><br>
+    <a href="staff/staffLogin.php"><h1>Staff Login</h1></a><br><br>
+    <a href="instructor/instructorLogin.php"><h1>Instructor Login</h1></a><br><br>
   </body>
 </html>
